# desi-rv-variables

./: .gitattributes  .gitignore  CITATION.cff  DATA_LICENSE_AND_ACKNOWLEDGMENTS.md  LICENSE  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: tests.yml
reports/: build_manifest_public.json  bundle_build_summary.md  candidate_shuffle_transition_null.csv  exploratory_acceleration_gate_summary.csv  exploratory_experiments_manifest.json  exploratory_experiments_summary.md  exploratory_external_match_context.csv  exploratory_high_amplitude_by_program.csv  exploratory_spectral_validation_summary.csv  full_pipeline_permutation_null.csv  heuristic_offset_shuffle_null.csv  injection_recovery.csv  metric_shift_summary.csv  primary_cohort_transition_table.csv  program_night_offset_uncertainty.csv  strict_candidate_transition_table.csv  threshold_sensitivity.csv
research/: amendments.md  confirmation_protocol.md  data_contract.md  exclusion_rules.md  exploratory_experiments_protocol.md  literature_map.md  protocol.md
scripts/: build_local_bundles.ps1  build_local_bundles.sh
src/desi_rv_variables/: __init__.py  catalogues.py  cli.py  experiments.py  exploratory_reporting.py  local_build.py  oof.py  provenance.py  reporting.py  robustness.py  simulation.py  spectral_validation.py
tests/: test_build_integration.py  test_catalogues.py  test_experiments.py  test_exploratory_reporting.py  test_local_build.py  test_metadata.py  test_oof.py  test_robustness.py  test_simulation.py  test_spectral_validation.py
